[package]
name = "feeds_processing"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-registry = { workspace = true }
anomaly_detection = { workspace = true }
feed_registry = { workspace = true }
data_feeds = { workspace = true }
config = { workspace = true }
utils = { workspace = true }
prometheus = { workspace = true }
gnosis_safe = { workspace = true }
crypto = { workspace = true }
once_cell = { workspace = true }
hex = { workspace = true }
ringbuf = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
alloy = { workspace = true, features = [
    "sol-types",
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "transports",
    "transport-http",
    "transport-ipc",
    "transport-ws",
    "pubsub",
] }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
