[package]
name = "gnosis_safe"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
hex = "0.4.3"
alloy = { version = "0.8", features = [
    "sol-types",
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "transports",
    "transport-http",
    "transport-ipc",
    "transport-ws",
    "pubsub",
] }
alloy-primitives = "0.8.19"
alloy-encode-packed = "0.1.1"
anyhow = "1.0.89"
serde_json = { workspace = true }
serde = { workspace = true }
