[package]
name = "gnosis_safe"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
feed_registry = { path = "../feed_registry" }
data_feeds = {path = "../data_feeds"}
hex = "0.4.3"
alloy = { version = "0.9", features = [
    "sol-types",
    "contract",
    "network",
    "node-bindings",
    "providers",
    "rpc",
    "rpc-client",
    "rpc-types-eth",
    "rpc-types-trace",
    "signers",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
    "transports",
    "transport-http",
    "transport-ipc",
    "transport-ws",
    "pubsub",
] }
alloy-primitives = "0.8"
anyhow = "1.0.89"
serde_json = { workspace = true }
serde = { workspace = true }
