[package]
name = "gnosis_safe"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
feed_registry = { workspace = true }
data_feeds = { workspace = true }
hex = { workspace = true }
alloy = { workspace = true, features = ["sol-types", "contract", "network", "node-bindings", "providers", "rpc", "rpc-client", "rpc-types-eth", "rpc-types-trace", "signers", "signer-keystore", "signer-ledger", "signer-mnemonic", "signer-trezor", "signer-yubihsm", "transports", "transport-http", "transport-ipc", "transport-ws", "pubsub"] }
alloy-primitives = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
