[package]
name = "blocksense-metrics"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blocksense-utils = { workspace = true }
prometheus = { workspace = true }
actix-web = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
