[package]
name = "prometheus"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
# Note(stanm): Stefan really wanted to keep the library called the same, so we
# alias the framework.
prometheus_framework = { package = "prometheus", version = "0.13.4" }
actix-web = "4.5.1"
reqwest = { workspace = true }
anyhow = { workspace = true }
lazy_static = "1.4.0"
