[package]
name = "prometheus"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
utils = { workspace = true }
# Note(stanm): Stefan really wanted to keep the library called the same, so we
# alias the framework.
prometheus_framework = { workspace = true }
actix-web = { workspace = true }
reqwest = { workspace = true }
anyhow = { workspace = true }
lazy_static = { workspace = true }
