[package]
name = "blocksense-registry"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

description = """
Tools for working with the Blocksense registry
"""

[lib]
name = "blocksense_registry"

[dependencies]
anyhow = "1"
reqwest = { version = "0.12", features=["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.117"
tracing = "0.1.40"
url = "2.5.0"
