[package]
name = "blocksense-registry"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

description = """
Tools for working with the Blocksense registry
"""

[lib]
name = "blocksense_registry"

[dependencies]
anyhow = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
