[package]
name = "blocksense-sdk"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-macro = { path = "macro" }
async-trait = "0.1"
anyhow = "1.0.82"
wit-bindgen = "0.16.0"
spin-sdk = "3.0.1"
reqwest = "0.12"
url = "2.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = { workspace = true }
