[package]
name = "blocksense-sdk"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
blocksense-macro = { workspace = true }
anyhow = { workspace = true }
wit-bindgen = { workspace = true }
spin-sdk = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
url = { workspace = true }
