[package]
name = "utils"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
tokio = { version = "1.4.0", features = ["full"] }
tracing = { version = "0.1.41", features = ["async-await", "log"] }
tracing-subscriber = { version = "0.3.19", features = ["json"] }
once_cell = "1.20.2"
console-subscriber = "0.4.0"
dirs = "6.0.0"
anyhow = "1.0.89"

[build-dependencies]
# All features enabled
vergen = { version = "9.0.4", features = ["build", "cargo", "rustc", "si"] }
