[package]
name = "blocksense-utils"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["async-await", "log"] }
tracing-subscriber = { workspace = true, features = ["json"] }
once_cell = { workspace = true }
console-subscriber = { workspace = true }
dirs = { workspace = true }
anyhow = { workspace = true }

[build-dependencies]
# All features enabled
vergen = { workspace = true, features = ["build", "cargo", "rustc", "si"] }
