[package]
name = "crypto-price-feeds"
authors = ["Antoni Dikov"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
blocksense-sdk = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
serde-this-or-that = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_derive = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
prettytable-rs = { workspace = true }
