[package]
name = "exsat-holdings"
authors = ["Yordan Madzhunkov"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wit-bindgen = { workspace = true }
blocksense-sdk = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }
url = { workspace = true }
serde = { workspace = true, features = ["derive"] }
prettytable-rs = { workspace = true }
