[package]
name = "blocksense-macro"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true

description = """
Rust procedural macros for Blocksense and associated WIT files
"""

[lib]
name = "blocksense_macro"
proc-macro = true

[dependencies]
anyhow = { workspace = true }
bytes = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full"] }
