[package]
name = "trigger-oracle"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "3.1.15", features = ["derive", "env"] }
futures = "0.3"
is-terminal = "0.4.12"
log = "0.4.21"
reqwest = { version = "0.12", features=["json"] }
serde = "1.0"
serde_json = "1.0"

spin-app = { git = "https://github.com/blocksense-network/spin", branch="blocksense"}
spin-core = { git = "https://github.com/blocksense-network/spin", branch="blocksense"}
spin-trigger = { git = "https://github.com/blocksense-network/spin", branch="blocksense"}
tokio = { version = "1.11", features = ["full"] }
tokio-scoped = "0.2.0"
tracing = { version = "0.1.40" , features=["log"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
wasmtime = "21.0.1"
